SERVER-72997 Fix several edge cases in histogram creation